# DeepLearning

./: GestureRecognition.py  pyproject.toml
