[project]
name = "deeplearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.3.0",
    "fastapi>=0.115.12",
    "gradio>=5.25.2",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "streamlit>=1.44.1",
    "streamlit-webrtc>=0.62.4",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]
